# dmcs

./: .gitmodules  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  doxygen.am  doxygen.cfg  log4cxx.cfg  m4
include/: BRGrammar.h  BRGrammar.tcc  BaseBuilder.h  BaseDMCS.h  BaseSolver.h  BaseSortingStrategy.h  BaseVisitor.h  BeliefCombination.h  BeliefState.h  BinaryTreeQPGenerator.h  BodySortingStrategy.h  BridgeRulesBuilder.h  BridgeRulesBuilder.tcc  CNFLocalLoopFormulaBuilder.h  Cache.h  ClaspProcess.h  ClaspResultBuilder.h  ClaspResultBuilder.tcc  ClaspResultGrammar.h  ClaspResultGrammar.tcc  ClaspResultOnlineParser.h  Client.h  Client.tcc  CnfBuilder.h  CnfBuilder.tcc  CnfGrammar.h  CnfGrammar.tcc  CommandType.h  CommandTypeFactory.h  ConfigMessage.h  Context.h  ContextGenerator.h  ContextSortStrategy.h  ContextSubstitution.h  DiamondOptQPGenerator.h  DiamondQPGenerator.h  DiamondZigZagOptQPGenerator.h  DiamondZigZagQPGenerator.h  DimacsVisitor.h  DynCtxGenBaseBuilder.h  (+58 more)
include/dmcs/: AbstractContext.h  AskNextNotification.h  BaseDMCS.h  BaseNotification.h  BaseTypes.h  BeliefCombination.h  BeliefStateResultAdder.h  Cache.h  CommandType.h  CommandTypeFactory.h  ConflictNotification.h  Context.h  DLVEngine.h  DLVEvaluator.h  DLVInstantiator.h  Debug.h  Engine.h  Evaluator.h  InputProvider.h  Instantiator.h  Log.h  Makefile.am  Message.h  ModelSessionId.h  Neighbor.h  OptCommandType.h  OptDMCS.h  OutputNotification.h  ParentsNotification.h  PrimitiveCommandType.h  PrimitiveDMCS.h  PrimitiveMessage.h  ProgramOptions.h  QueryPlan.h  QueryPlan.tcc  ReturnMessage.h  SessionNotification.h  StreamingBackwardMessage.h  StreamingCommandType.h  StreamingDMCS.h  (+4 more)
include/dyndmcs/: BaseSortingStrategy.h  ChosenCtxSortingStrategy.h  ChosenQualityCtxSortingStrategy.h  ConfigMessage.h  ContextSortingStrategy.h  ContextSubstitution.h  DynamicCommandType.h  DynamicConfiguration.h  InstantiateBackwardMessage.h  InstantiateMessage.h  InstantiateReturnMessage.h  Instantiator.h  Instantiator.tcc  InstantiatorCommandType.h  Makefile.am  Match.h  NoSBACtxSortingStrategy.h  NoSBANeighborSortingStrategy.h  QualityCtxSortingStrategy.h  RedBBodySortingStrategy.h
include/generator/: BinaryTreeTopoGenerator.h  ContextGenerator.h  ContextGeneratorBase.h  ContextGeneratorDeterministic.h  ContextGeneratorNonDeterministic.h  DLVVisitor.h  DiamondArbitraryTopoGenerator.h  DiamondOptTopoGenerator.h  DiamondTopoGenerator.h  DiamondZigZagOptTopoGenerator.h  DiamondZigZagTopoGenerator.h  DynGridTopoGenerator.h  DynRakeTopoGenerator.h  DynRandomTopoGenerator.h  DynSocialTopoGenerator.h  DynTopologyGenerator.h  HouseOptTopoGenerator.h  HouseTopoGenerator.h  LogicVisitor.h  Makefile.am  MultipleRingOptTopoGenerator.h  MultipleRingTopoGenerator.h  NewContextGenerator.h  NewLogicVisitor.h  OptTopologyGenerator.h  QueryPlanWriter.h  RingEdgeTopoGenerator.h  RingOptTopoGenerator.h  RingTopoGenerator.h  TopologyGenerator.h  dmcsGen.h  new_dmcsGen.h
include/loopformula/: CNFLocalLoopFormulaBuilder.h  DimacsVisitor.h  EquiCNFLocalLoopFormulaBuilder.h  IMPLocalLoopFormulaBuilder.h  LocalLoopFormulaBuilder.h  LoopFormula.h  LoopFormulaBuilder.h  LoopFormulaDirector.h  Makefile.am
include/mcs/: Atoms.h  BackwardMessage.h  BaseJoiner.h  BaseType.h  Belief.h  BeliefState.h  BeliefStateAdder.h  BeliefStateOffset.h  BeliefTable.h  BridgeRule.h  BridgeRuleEvaluator.h  BridgeRuleTable.h  CachePosition.h  CycleBreaker.h  ForwardMessage.h  HashedBiMap.h  Heads.h  ID.h  InputBeliefState.h  JoinIn.h  LeafJoiner.h  Logger.h  Makefile.am  NewBaseDispatcher.h  NewBeliefState.h  NewContext.h  NewJoinerDispatcher.h  NewMessage.h  NewNeighbor.h  NewOutputDispatcher.h  NongroundBelief.h  NongroundBeliefTable.h  NormalContext.h  Pool.h  Printhelpers.h  ProxySignatureByLocal.h  QueryID.h  QueryPlan.h  Registry.h  RequestDispatcher.h  (+8 more)
include/network/: AsynClient.h  AsynClient.tcc  BaseClient.h  BaseDispatcher.h  BaseHandler.h  BaseStreamer.h  Client.h  Client.tcc  ConcurrentMessageDispatcher.h  ConcurrentMessageQueue.h  ConcurrentMessageQueueFactory.h  ConcurrentMessageQueueHelper.h  ConcurrentMessageQueueOwning.h  ConcurrentMessageQueueTpl.h  Handler.h  Handler.tcc  HandlerThread.h  HandlerWrapper.h  JoinThread.h  JoinerDispatcher.h  Makefile.am  Manager.h  MessageDispatcher.h  MessageQueue.h  MessageQueueFactory.h  MessagingGateway.h  NeighborIn.h  NeighborInputThread.h  NeighborOut.h  NeighborThread.h  NetworkPointers.h  NewClient.h  NewConcurrentMessageDispatcher.h  NewConcurrentMessageDispatcher.tcc  NewHandler.h  NewJoinerDispatcher.h  NewNeighborOut.h  NewNeighborThread.h  NewOutputDispatcher.h  NewOutputThread.h  (+13 more)
include/parser/: BRGrammar.h  BRGrammar.tcc  BaseBuilder.h  BaseParser.hpp  (+37 more)
src/: BaseDMCS.cpp  BeliefCombination.cpp  CNFLocalLoopFormulaBuilder.cpp  Cache.cpp  ClaspProcess.cpp  ClaspResultOnlineParser.cpp  ContextGenerator.cpp  DLVVisitor.cpp  DimacsVisitor.cpp  DynamicConfiguration.cpp  IMPLocalLoopFormulaBuilder.cpp  Instantiator.cpp  LocalLoopFormulaBuilder.cpp  LogicVisitor.cpp  Makefile.am  OptDMCS.cpp  PrimitiveDMCS.cpp  ProcessBuf.cpp  QueryPlan.cpp  QueryPlanGenerator.cpp  Server.cpp  clasp-wrapper.sh  dmcsGen.cpp  dmcsc.cpp  dmcsd.cpp  dynGen.cpp  genTest.cpp  new_dmcsc.cpp  new_dmcsd.cpp  new_dmcsm.cpp  run-tests.sh  staticGen.cpp
testsuite/: BeliefStateClient.cpp  BeliefStateClient.h  BeliefStateServer.cpp  BeliefStateServer.h  BridgeRuleParser.cpp  BridgeRuleParser.h  Child.cpp  Child.h  DmcsClientTest.cpp  DmcsClientTest.h  Family.h  Makefile.am  NeighborInServer.cpp  NeighborInServer.h  NeighborOutServer.cpp  NeighborOutServer.h  Parent.cpp  Parent.h  QueryPlan.cpp  QueryPlan.h  QueryPlanParser.cpp  QueryPlanParser.h  SimpleBeliefStateAdder.h  SimpleClient.cpp  SimpleClient.h  SimpleServer.cpp  SimpleServer.h  context1.plan  context1.qp  context2.plan  context3.plan  context4.plan  context5.plan  queryPlanParserTest1.txt  testAbstractContext.cpp  testBeliefComparison.cpp  testBeliefState.cpp  testBeliefStateCaching.cpp  testBlockingAsio.cpp  testBlockingClasp.cpp  (+40 more)
(+360 files in other folders)
