AUTOMAKE_OPTIONS = gnu

SUBDIRS = dyndmcs generator loopformula network parser

# including headers for make dist
noinst_HEADERS =  \
	  	ProgramOptions.h
		Signature.h \
	  	CNFLocalLoopFormulaBuilder.h \
	  	IMPLocalLoopFormulaBuilder.h \
	  	EquiCNFLocalLoopFormulaBuilder.h \
		LocalLoopFormulaBuilder.h \
		LoopFormula.h \
		LoopFormulaBuilder.h \
	 	LoopFormulaDirector.h \
		BaseDMCS.h \
		BaseSolver.h \
		BaseVisitor.h \
		BeliefCombination.h \
		BeliefState.h \
		Cache.h \
		ClaspProcess.h \
		CommandType.h \
		CommandTypeFactory.h \
		Context.h \
                ContextGenerator.h \
                DiamondQPGenerator.h \
                DLVVisitor.h \
		Match.h \
		DimacsVisitor.h \
		LogicVisitor.h \
		OptMessage.h \
		OptCommandType.h \
		Message.h \
		Neighbor.h \
		PrimitiveDMCS.h \
		PrimitiveMessage.h \
		PrimitiveCommandType.h \
		Process.h \
		ProcessBuf.h \
		ProxySignatureByLocal.h \
                QueryPlanWriter.h \
                QueryPlan.h \
		ReturnMessage.h \
		Rule.h \
		SatSolver.h \
		SatSolver.tcc \
		StatsInfo.h \
                Signature.h \
		Theory.h \
		Variable.h


