AUTOMAKE_OPTIONS = gnu

SUBDIRS = dmcs dyndmcs generator loopformula network parser

# including headers for make dist
noinst_HEADERS =  \
		BaseSolver.h \
		BaseVisitor.h \
		BeliefCombination.h \
		BeliefState.h \
		Cache.h \
		ClaspProcess.h \
		ClaspResultBuilder.h \
		ClaspResultBuilder.tcc \
		ClaspResultGrammar.h \
		ClaspResultGrammar.tcc \
		ClaspResultOnlineParser.h \
		ClaspResultOnlineParser.tcc \
		Client.h \
		Client.tcc \
		CnfBuilder.h \
		CnfBuilder.tcc \
		CnfGrammar.h \
		CnfGrammar.tcc \
		CommandType.h \
		CommandTypeFactory.h \
		Context.h \
                DLVVisitor.h \
		DimacsVisitor.h \
		LogicVisitor.h \
		Message.h \
		Neighbor.h \
		Process.h \
		ProcessBuf.h \
	  	ProgramOptions.h \
		ProxySignatureByLocal.h \
                QueryPlanWriter.h \
                QueryPlan.h \
		ReturnMessage.h \
		Rule.h \
		SatSolver.h \
		SatSolver.tcc \
		StatsInfo.h \
                Signature.h \
		Theory.h \
		generator/ContextGenerator.h \
		generator/BinaryTreeTopoGenerator.h \
		generator/DiamondTopoGenerator.h \
		generator/DiamondOptTopoGenerator.h \
		generator/DiamondArbitraryTopoGenerator.h \
		generator/DiamondZigZagTopoGenerator.h \
		generator/DiamondZigZagOptTopoGenerator.h \
		generator/HouseTopoGenerator.h \
		generator/HouseOptTopoGenerator.h \
		generator/MultipleRingTopoGenerator.h \
		generator/MultipleRingOptTopoGenerator.h \
		generator/TopologyGenerator.h \
		generator/OptTopologyGenerator.h \
		generator/RingTopoGenerator.h \
		generator/RingOptTopoGenerator.h \
		generator/RingEdgeTopoGenerator.h \
		generator/dmcsGen.h \
		generator/DynTopologyGenerator.h \
		generator/DynGridTopoGenerator.h \
		generator/DynRakeTopoGenerator.h \
		generator/DynRandomTopoGenerator.h \
		connection.hpp


