AUTOMAKE_OPTIONS = gnu

SUBDIRS = dmcs dyndmcs generator loopformula network parser

# including headers for make dist
noinst_HEADERS =  \
		BaseSolver.h \
		BaseVisitor.h \
		BeliefCombination.h \
		BeliefState.h \
		ClaspProcess.h \
		CommandType.h \
		CommandTypeFactory.h \
		Context.h \
                ContextGenerator.h \
                DLVVisitor.h \
		DimacsVisitor.h \
		LogicVisitor.h \
		Message.h \
		Neighbor.h \
		Process.h \
		ProcessBuf.h \
	  	ProgramOptions.h \
		ProxySignatureByLocal.h \
                QueryPlanWriter.h \
                QueryPlan.h \
		ReturnMessage.h \
		Rule.h \
		SatSolver.h \
		SatSolver.tcc \
		StatsInfo.h \
                Signature.h \
		Theory.h \
		Variable.h


