AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BaseDMCS.h \
		BeliefCombination.h \
		Cache.h \
		CommandType.h \
		CommandTypeFactory.h \
		Context.h \
		Debug.h \
		Log.h \
		Message.h \
		Neighbor.h \
		OptCommandType.h \
		OptDMCS.h \
		OptMessage.h \
		ParentsNotification.h \
	  	ProgramOptions.h \
		PrimitiveCommandType.h \
		PrimitiveDMCS.h \
		PrimitiveMessage.h \
                QueryPlan.h \
                QueryPlan.tcc \
		ReturnMessage.h \
		StatsInfo.h \
		StreamingCommandType.h \
		StreamingDMCS.h \
		StreamingForwardMessage.h \
		StreamingBackwardMessage.h
