AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		AskNextNotification.h \
		BaseDMCS.h \
		BaseNotification.h \
		BaseTypes.h \
		BeliefCombination.h \
		Cache.h \
		CommandType.h \
		CommandTypeFactory.h \
		ConflictNotification.h \
		Context.h \
		Debug.h \
		DLVEngine.h \
		DLVEvaluator.h \
		DLVInstantiator.h \
		Engine.h \
		Log.h \
		InputProvider.h \
		ModelSessionId.h \
		Message.h \
		Neighbor.h \
		OptCommandType.h \
		OptDMCS.h \
		OptMessage.h \
		OutputNotification.h \
	  	ProgramOptions.h \
		PrimitiveCommandType.h \
		PrimitiveDMCS.h \
		PrimitiveMessage.h \
                QueryPlan.h \
                QueryPlan.tcc \
		ReturnMessage.h \
		SessionNotification.h \
		StatsInfo.h \
		StreamingCommandType.h \
		StreamingDMCSNotification.h \
		StreamingForwardMessage.h \
		StreamingBackwardMessage.h \
		UnsatNotification.h \
		URLBuf.h
