AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		dyndmcs/BaseSortingStrategy.h \
		dyndmcs/ChosenCtxSortingStrategy.h \
		dyndmcs/ChosenQualityCtxSortingStrategy.h \
		dyndmcs/ConfigMessage.h \
		dyndmcs/DynamicConfiguration.h \
		dyndmcs/DynamicCommandType.h \
		dyndmcs/Instantiator.h \
		dyndmcs/InstantiatorCommandType.h \
		dyndmcs/InstantiateMessage.h \
		dyndmcs/InstantiateBackwardMessage.h \
		dyndmcs/InstantiateForwardMessage.h \
		dyndmcs/ContextSortingStrategy.h \
		dyndmcs/ContextSubstitution.h \
		dyndmcs/NoSBACtxSortingStrategy.h \
		dyndmcs/NoSBAQualityCtxSortingStrategy.h \
		dyndmcs/NoSBANeighborSortingStrategy.h \
		dyndmcs/NoSBARedBBodySortingStrategy.h \
		dyndmcs/QualityCtxSortingStrategy.h \
		dyndmcs/RedBBodySortingStrategy.h 


