AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BaseSortingStrategy.h \
		ChosenCtxSortingStrategy.h \
		ChosenQualityCtxSortingStrategy.h \
		ConfigMessage.h \
		DynamicConfiguration.h \
		DynamicCommandType.h \
		Instantiator.h \
		InstantiatorCommandType.h \
		InstantiateMessage.h \
		InstantiateBackwardMessage.h \
		InstantiateForwardMessage.h \
		ContextSortingStrategy.h \
		ContextSubstitution.h \
		NoSBACtxSortingStrategy.h \
		NoSBAQualityCtxSortingStrategy.h \
		NoSBANeighborSortingStrategy.h \
		NoSBARedBBodySortingStrategy.h \
		QualityCtxSortingStrategy.h \
		RedBBodySortingStrategy.h \
		Variable.h
