AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		ContextGenerator.h \
		BinaryTreeTopoGenerator.h \
		DiamondTopoGenerator.h \
		DiamondOptTopoGenerator.h \
		DiamondArbitraryTopoGenerator.h \
		DiamondZigZagTopoGenerator.h \
		DiamondZigZagOptTopoGenerator.h \
		HouseTopoGenerator.h \
		HouseOptTopoGenerator.h \
		MultipleRingTopoGenerator.h \
		MultipleRingOptTopoGenerator.h \
		TopologyGenerator.h \
		OptTopologyGenerator.h \
		RingTopoGenerator.h \
		RingOptTopoGenerator.h \
		RingEdgeTopoGenerator.h \
		dmcsGen.h \
		DynTopologyGenerator.h \
		DynGridTopoGenerator.h \
		DynRakeTopoGenerator.h \
		DynRandomTopoGenerator.h


