AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BaseVisitor.h \
		ContextGenerator.h \
		NewContextGenerator.h \
		DLVVisitor.h \
		BinaryTreeTopoGenerator.h \
		DiamondTopoGenerator.h \
		DiamondOptTopoGenerator.h \
		DiamondArbitraryTopoGenerator.h \
		DiamondZigZagTopoGenerator.h \
		DiamondZigZagOptTopoGenerator.h \
		HouseTopoGenerator.h \
		HouseOptTopoGenerator.h \
		LogicVisitor.h \
		MultipleRingTopoGenerator.h \
		MultipleRingOptTopoGenerator.h \
		TopologyGenerator.h \
		OptTopologyGenerator.h \
                QueryPlanWriter.h \
		RandomQPGenerator.h \
		RingTopoGenerator.h \
		RingOptTopoGenerator.h \
		RingEdgeTopoGenerator.h \
		dmcsGen.h \
		new_dmcsGen.h \
		DynTopologyGenerator.h \
		DynGridTopoGenerator.h \
		DynRakeTopoGenerator.h \
		DynRandomTopoGenerator.h


