AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BaseVisitor.h \
		NewContextGenerator.h \
		BinaryTreeTopoGenerator.h \
		ContextGeneratorBase.h \
		ContextGeneratorDeterministic.h \
		ContextGeneratorNonDeterministic.h \
		DiamondTopoGenerator.h \
		DiamondOptTopoGenerator.h \
		DiamondArbitraryTopoGenerator.h \
		DiamondZigZagTopoGenerator.h \
		DiamondZigZagOptTopoGenerator.h \
		HouseTopoGenerator.h \
		HouseOptTopoGenerator.h \
		NewLogicVisitor.h \
		MultipleRingTopoGenerator.h \
		MultipleRingOptTopoGenerator.h \
		TopologyGenerator.h \
		OptTopologyGenerator.h \
		RandomQPGenerator.h \
		RingTopoGenerator.h \
		RingOptTopoGenerator.h \
		RingEdgeTopoGenerator.h \
		new_dmcsGen.h 

