AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
	  	CNFLocalLoopFormulaBuilder.h \
		DimacsVisitor.h \
	  	IMPLocalLoopFormulaBuilder.h \
	  	EquiCNFLocalLoopFormulaBuilder.h \
		LocalLoopFormulaBuilder.h \
		LoopFormula.h \
		LoopFormulaBuilder.h \
	 	LoopFormulaDirector.h 
