AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BackwardMessage.h \
		BaseJoiner.h \
		Belief.h \
		BeliefState.h \
		BeliefStateOffset.h \
		BeliefTable.h \
		BridgeRule.h \
		BridgeRuleEvaluator.h \
		BridgeRuleTable.h \
		ForwardMessage.h \
		HashedBiMap.h \
		Heads.h \
		ID.h \
		JoinIn.h \
		Logger.h \
		NewBaseDispatcher.h \
		NewBeliefState.h \
		NewContext.h \
		CycleBreaker.h \
		NewMessage.h \
		NormalContext.h \
		NewNeighbor.h \
		NewJoinerDispatcher.h \
		NewOutputDispatcher.h \
		Pool.h \
		Printhelpers.h \
		ProxySignatureByLocal.h \
		QueryID.h \
		QueryPlan.h \
		Registry.h \
		RequestDispatcher.h \
		ReturnedBeliefState.h \
		ResourceManager.h \
		Rule.h \
		Signature.h \
		StreamingJoiner.h \
		Table.h \
		Theory.h

