AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BackwardMessage.h \
		BaseJoiner.h \
		Belief.h \
		BeliefStateOffset.h \
		BeliefTable.h \
		BridgeRule.h \
		BridgeRuleEvaluator.h \
		BridgeRuleTable.h \
		CachePosition.h \
		ForwardMessage.h \
		Heads.h \
		ID.h \
		JoinIn.h \
		Logger.h \
		NewBaseDispatcher.h \
		NewBeliefState.h \
		NewContext.h \
		CycleBreaker.h \
		LeafJoiner.h \
		NewMessage.h \
		NormalContext.h \
		NewNeighbor.h \
		Pool.h \
		Printhelpers.h \
		ProxySignatureByLocal.h \
		QueryID.h \
		QueryPlan.h \
		Registry.h \
		ReturnedBeliefState.h \
		Rule.h \
		StreamingJoiner.h \
		Table.h \
		Variable.h

